-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
When using some lfs utils with multiple paths, and one of the paths has an error, it is possible to get misleading error messages:
$ mkdir /mnt/lustre/d $ lfs find /mnt/lustre/typo /mnt/lustre/d /mnt/lustre/d lt-lfs: failed for '/mnt/lustre/typo': Success
$ lfs getstripe /mnt/lustre/typo /mnt/lustre/d lt-lfs: getstripe for '/mnt/lustre/d' failed: No such file or directory /mnt/lustre/d stripe_count: 1 stripe_size: 4194304 pattern: 0 stripe_offset: -1
- is related to
-
LU-5170 lfs usability
-
- Open
-